增加内容跟修改模板

--- a/blogger/mulu/留言/liuyan.html
+++ b/blogger/mulu/留言/liuyan.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_srd9nc3esze.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="../hint.css">
-    <link rel="stylesheet" href="./situation.css">
+     <link rel="stylesheet" href="./situation.css">
      <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-    <script src="../gundongtiao.js"></script>
+     <script src="../gundongtiao.js"></script>
     <style>
 
     </style>
@@ -110,221 +110,7 @@
 
 
 
-    <script>
-
-
-
-
-
-       //不是2两位数的时候前面加0
-        function panduan(date) {
-            if (date < 10) {
-                return "0" + date;
-            } else {
-                return date;
-            }
-        } //获取当前时间
-
-
-        function date() {
-            var p = document.querySelector('.demo1');
-            var time = new Date();
-            var nian = time.getFullYear();
-            var yue = time.getMonth() + 1;
-            var ri = time.getDate();
-            var tian = time.getDay();
-            var wond = ['星期天', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'];
-            var week = wond[tian];
-            var shi = time.getHours();
-            var fen = time.getMinutes();
-            var miao = time.getSeconds();
-            newDate = panduan(nian) + "-" + panduan(yue) + "-" + panduan(ri) + " " + panduan(shi) + ":" + panduan(fen) + ":" + panduan(miao);
-            return newDate + "  " + week + "  ";
-        }
-
-
-        // vue模板
-       var vml = new Vue({
-
-            el: '#app', //获取dom节点
-
-
-            methods: { //点击事件控制区
-                add:function () {
-                    var  niceng=document.querySelector('.niceng')
-                    if (this.test_01=="" || this.test_02==""){
-                        niceng.focus()
-                        alert('请输入昵称或者内容')
-
-
-                    } else {
-                        this.mydata.push(
-                            {
-                                nickname:this.test_01,
-                                content:this.test_02,
-                                time:date()
-                            })
-
-                        this.test_02=''
-                        // window.location.href=''
-
-                    }
-
-                }
-
-            },
-
-            computed: { //逻辑计算处理数据，过滤数据
-
-
-            },
-           created(){
-                 var arr=localStorage.getItem(this.myinst)
-                  this.mydataa= JSON.parse(arr)
-           },
-
-            data: {
-                //你的数据
-                  test_01:'',
-                  test_02:'',
-                  mydataa:[],
-                    myinst:[],
-
-                mydata:[
-                    {
-                        nickname:'从小就疯了',
-                        content:'小哥哥你真帅',
-                        time:'2020-01-19 16:55:57 星期天  '
-                    },
-                    {
-                        nickname:'一如既往的峰',
-                        content:'你的博客好有很多的功能没有实现',
-                        time:'2020-01-19 16:55:57  星期天  '
-                    },
-                    {
-                        nickname:'安居啦',
-                        content:'还不错',
-                        time:'2020-01-19 16:55:57  星期天  '
-                    },
-                    {
-                        nickname:'小喵咪',
-                        content:'帅呆了',
-                        time:'2020-01-19 16:55:57  星期天  '
-                    },
-                    {
-                        nickname:'安其拉',
-                        content:'峡谷王者',
-                        time:'2020-01-19 16:55:57  星期天  ',
-                    },
-                    {
-                        nickname:'从小就疯了',
-                        content:'还可以啦',
-                        time:'2020-01-19 16:55:57  星期天  ',
-                    },
-
-                ]
-
-            },
-
-
-           components:{ //注册子组件
-
-
-           },
-
-
-            watch:{ //数据监控
-                mydata: function () {
-                    let arr=[]
-                     arr=JSON.stringify(this.mydata)
-                    localStorage.setItem(this.myinst,arr)
-                    console.log(arr)
-                }
-            },
-
-
-           filters:{ //处理特殊情况
-
-           },
-
-           directives:{ //自定义事件
-
-           }
-
-
-
-        })
-
-
-
-
-        // function tianjia() {
-        //     var val = text.value;
-        //     var val2=niceng.value
-        //
-        //     if (val == '') {
-        //         text.focus();
-        //         alert('请输入内容在添加');
-        //     } else if (val2==''){
-        //         alert('请输入昵称后添加')
-        //     } else {
-        //         var str =`
-        //
-        //         <div class="yonghu">
-        //             <a><img src="images/1.jpg"></a>
-        //             <span>${val2}</span><br>
-        //             <span>${val}</span>
-        //             <p>${date()}</p>
-        //
-        //         </div>
-        //
-        //         `
-        //         return str;
-        //     }
-        //
-        //     return '';
-        // }
-        //
-        // but.onclick = function() {
-        //     var timer = 0; // 保存私有的timer, 做节流
-        //     return function() {
-        //         clearTimeout(timer);
-        //         timer = setTimeout(function() {
-        //             var str = tianjia();
-        //             luban.innerHTML += str;
-        //             text.value='';
-        //         }, 500);
-        //     };
-        //
-        // }();
-        //
-
-
-
-
-        var tishiii=document.querySelector('.yqts');
-                function monitoring () {
-                    var width=window.innerWidth
-                      if (width<1300){
-                             tishiii.style.display='none';
-                    }else if (width>=1300) {
-                        tishiii.style.display='block';
-                    }
-
-                }
-
-                  monitoring ();
-
-
-
-                window.onresize = function(){
-                   monitoring ();
-
-                };
-
-
-
-    </script>
+    <script src="./index.js"></script>
 
 
 </body>
