增加内容跟修改模板

--- a/blogger/mulu/博客日志/index.html
+++ b/blogger/mulu/博客日志/index.html
@@ -134,7 +134,7 @@
                         </div>
 
                          <div class="daohang3">
-                             <h3><span>—</span> 关注微信 <span>—</span></h3>
+                             <h3><span>—</span> 加我微信 <span>—</span></h3>
                                 <img src="images/1.jpg">
                          </div>
 
