增加内容跟修改模板

--- a/blogger/mulu/备忘录/index.html
+++ b/blogger/mulu/备忘录/index.html
@@ -177,7 +177,7 @@
                     },
                     //移除事件
                     remove: function remove(index) {
-                        this.mydata.splice(index);
+                        this.mydata.splice(index,1);
                     },
                     //全部任务事件
                     quan: function quan() {
