--- a/blogger/mulu/学生管理表案例/index.html
+++ b/blogger/mulu/学生管理表案例/index.html
@@ -25,16 +25,14 @@
         .warning {
             font-weight: bold;
         }
-
-        .tisi{
+        
+        .tisi {
             width: 1200px;
             margin: auto;
             height: 40px;
             text-align: center;
             font-size: 20px;
         }
-
-
     </style>
 </head>
 
@@ -52,10 +50,6 @@
 
 
     </div>
-
-
-
-
 
 
     <!--添加学员信息标签-->
@@ -102,26 +96,16 @@
 
 
 
-
-
-
-
-
-
-
-
     <script>
-
-
 
         // 学生管理系统
         Vue.component('my-component-name', {
             template: "#add",
             data: function() {
                 return {
-                     name: "",
-                     pack: "",
-                     state:""
+                    name: "",
+                    pack: "",
+                    state: ""
                 }
             },
 
@@ -129,61 +113,50 @@
             methods: {
                 //向父组件发射数据
                 add: function() {
-                    if (this.name==""||this.pack=="") return alert('请输入姓名或者手机号')
-                    var myreg=/^[1][3,4,5,7,8][0-9]{9}$/  //匹配电话的正则
-                    if (!myreg.test(this.pack)){
+                    if (this.name == "" || this.pack == "") return alert('请输入姓名或者手机号')
+                    var myreg = /^[1][3,4,5,7,8][0-9]{9}$/ //匹配电话的正则
+                    if (!myreg.test(this.pack)) {
                         return alert("请输入有效的手机号码")
                     }
                     this.$emit("add", this.name, this.pack)
-                    this.name=""
-                    this.pack=""
+                    this.name = ""
+                    this.pack = ""
                 }
             },
 
         })
 
 
-
-
         // 展示信息组件
-        Vue.component("mydataa",{
+        Vue.component("mydataa", {
             template: "#zhanshi",
-            props:['mydata'],
-            methods:{
-                remove:function () {
+            props: ['mydata'],
+            methods: {
+                remove: function() {
                     this.$emit('remove')
-
                 }
-
             }
         })
 
 
-
-
-
-
-
-
+        //跟组件
         var vml = new Vue({
             el: '#app', //获取dom节点
             methods: { //点击事件控制区
-                add: function(name,pack) {
+                add: function(name, pack) {
                     console.log('拿到数据了')
-                    this.mydata.push(
-                        {
-                            name:name,
-                            pack:pack,
-                            state:false
-                        }
-                    )
+                    this.mydata.push({
+                        name: name,
+                        pack: pack,
+                        state: false
+                    })
                     console.log(this.mydata)
                 },
-                 //移除事件
-                    remove: function remove(index) {
-                        this.mydata.splice(index,1);
-                        console.log('删除成功了')
-                    },
+                //移除事件
+                remove: function remove(index) {
+                    this.mydata.splice(index, 1);
+                    console.log('删除成功了')
+                },
             },
 
 
@@ -191,13 +164,12 @@
                 mydata: [{
                     name: '小刘',
                     pack: "13058420123",
-                    state:false
-                },{
+                    state: false
+                }, {
                     name: '小方',
                     pack: "13058420103",
-                    state:false
-                }
-                ]
+                    state: false
+                }]
 
             },
 
