增加内容跟修改模板

--- a/blogger/mulu/http协议内容/http.html
+++ b/blogger/mulu/http协议内容/http.html
@@ -573,7 +573,7 @@
 
 
                     <div class="tsxi-01">
-                        <a href="../shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href="javascript:history.go(-1)"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
                 </div>
