--- a/blogger/mulu/博客日志/z-02.html
+++ b/blogger/mulu/博客日志/z-02.html
@@ -417,7 +417,7 @@
 
 
                     <div class="tsxi-01">
-                        <a href="./index.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href='javascript:history.go(-1)'><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
 
@@ -464,7 +464,7 @@
 
             script.src = url;
             document.body.appendChild(script);
-
+     
             script.onload = function() {
                 document.body.removeChild(script); //加载完成移除标签
             };
