--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -506,7 +506,7 @@
 
 
                 <div class="tsxi-01">
-                    <a href="../shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                    <a href="javascript:history.go(-1)"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                 </div>
 
