--- a/blogger/mulu/常见的黑盒测试方法/index.html
+++ b/blogger/mulu/常见的黑盒测试方法/index.html
@@ -324,7 +324,7 @@
                     <ul class="daohang">
 
                         <li>
-                            <a href="../关于我/guanyu.html">关于我</a>
+                            <a href="../关于我/message%20.html">关于我</a>
                         </li>
 
                         <li>
@@ -333,15 +333,15 @@
 
 
                         <li>
-                            <a href="../留言/liuyan.html">留言板</a>
+                            <a href="../留言/message.html">留言板</a>
                         </li>
 
                         <li>
-                            <a href="../动态/dongtai.html">动态</a>
+                            <a href="../动态/dynamic.html">动态</a>
                         </li>
 
                         <li>
-                            <a href="../shouye.html">首页</a>
+                            <a href="../home.html">首页</a>
                         </li>
 
 
