--- a/java script/boot strap.html
+++ b/java script/boot strap.html
@@ -21,7 +21,11 @@
 
         .table{
             text-align: center;
+            position: absolute;
+            margin-right:0 ;
         }
+
+
     </style>
 </head>
 
