--- a/blogger/mulu/博客日志/z-01.html
+++ b/blogger/mulu/博客日志/z-01.html
@@ -324,22 +324,23 @@
 
 
                         <li>
-                            <a href="../留言/liuyan.html">留言板</a>
+                            <a href="../留言/message.html">留言板</a>
                         </li>
 
                         <li>
-                            <a href="../动态/dongtai.html">动态</a>
+                            <a href="../动态/dynamic.html">动态</a>
                         </li>
 
                         <li>
-                            <a href="../shouye.html">首页</a>
+                            <a href="../home.html">首页</a>
                         </li>
 
 
                     </ul>
                 </div>
 
-                <a class="dengru">
+
+                <a class="dengru" href="tencent://message/?Menu=yes&uin=1607187254&Site=80fans&Service=300&sigT=45a1e5847943b64c6ff3990f8a9e644d2b31356cb0b4ac6b24663a3c8dd0f8aa12a545b1714f9d45">
                     <i class="iconfont icon-icon"></i>
                 </a>
 
