--- a/blogger/mulu/home.html
+++ b/blogger/mulu/home.html
@@ -6,7 +6,7 @@
     <title>首页</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_etxp9llkd7.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.7.2/animate.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="./hint.css">
     <script src="./gundongtiao.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
@@ -211,7 +211,7 @@
 
 
     <!--全局的js文件引入-->
-    <script src="situation.js"></script>
+    <script src="home.js"></script>
 
 </body>
 </html>
