--- a/website/shouye/index.html
+++ b/website/shouye/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <title>小峰的个人空间</title>
     <style>
         a {
             text-decoration: none;
@@ -436,10 +436,37 @@
                     </a>
                 </div>
                 <div class="miaosu">
-                    <a href="./3d旋转/3d旋转.html">3d旋转练习</a>
+                    <a href="./3d旋转/3d旋转.html">3d旋转练习1</a>
                     <span>完结</span>
                 </div>
             </li>
+
+
+              <li>
+                <div class="zuoping">
+                    <a href="./3d旋转/3D动画/动画样式.html">
+                        <img src="imgs/2.jpg">
+                    </a>
+                </div>
+                <div class="miaosu">
+                    <a href="./3d旋转/3D动画/动画样式.html">3d旋转练习2</a>
+                    <span>完结</span>
+                </div>
+            </li>
+
+            <li>
+                <div class="zuoping">
+                    <a href="./3d旋转/3D动画/旋转.html">
+                        <img src="imgs/2.jpg">
+                    </a>
+                </div>
+                <div class="miaosu">
+                    <a href="./3d旋转/3D动画/旋转.html">3d旋转练习3</a>
+                    <span>完结</span>
+                </div>
+            </li>
+
+
 
 
                  <li>
@@ -628,6 +655,48 @@
                     <span>完结</span>
                 </div>
             </li>
+
+
+             <li>
+                <div class="zuoping">
+                    <a href="学生管理表.html">
+                        <img src="imgs/2.jpg">
+                    </a>
+                </div>
+                <div class="miaosu">
+                    <a href='学生管理表.html'>vue表单练习</a>
+                    <span>完结</span>
+                </div>
+            </li>
+
+
+
+             <li>
+                <div class="zuoping">
+                    <a href="时钟样式.html">
+                        <img src="imgs/2.jpg">
+                    </a>
+                </div>
+                <div class="miaosu">
+                    <a href='时钟样式.html'>时钟样式2</a>
+                    <span>完结</span>
+                </div>
+            </li>
+
+              <li>
+                <div class="zuoping">
+                    <a href="轮播图.html">
+                        <img src="imgs/2.jpg">
+                    </a>
+                </div>
+                <div class="miaosu">
+                    <a href='轮播图.html'>轮播图2</a>
+                    <span>完结</span>
+                </div>
+            </li>
+
+
+
 
 
 
